objects/SmartFridge__c.object
<CustomObject>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>deviceId__c</fullName>
        <externalId>true</externalId>
        <label>deviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>door__c</fullName>
        <label>door</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <type>DateTime</type>
    </fields>
    <label>SmartFridge</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reading Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartFridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>